[package]
name = "collab-stress-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.12"
clap = "3.0.0-beta.4"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"

[dependencies.link-cob]
path = "../radicle-link/cob"

[patch.crates-io.thrussh-encoding]
git = "https://github.com/FintanH/thrussh.git"
branch = "generic-agent"
