[package]
name = "collab-stress-test"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
octocrab = "0.12"
clap = "3.0.0-beta.4"
chrono = "0.4"
serde = "1.0"
serde_json = "1.0"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
thiserror = "1.0"
globset = "0.4"
regex = "1.3"
jsonschema = "0.12.1"
lazy_static = "1.4.0"
tracing-subscriber = "0.2.20"

[dependencies.link-cob]
path = "../radicle-link/cob"

[dependencies.link-identities]
path = "../radicle-link/link-identities"

[dependencies.link-crypto]
path = "../radicle-link/link-crypto"

[dependencies.radicle-git-ext]
path = "../radicle-link/git-ext"

[patch.crates-io.thrussh-encoding]
git = "https://github.com/FintanH/thrussh.git"
branch = "generic-agent"

[dependencies.git2]
version = "=0.13.20"
default-features = false
features = []

[dependencies.automerge]
git = "https://github.com/automerge/automerge-rs.git"
branch = "main"

[patch.crates-io.git2]
git = "https://github.com/radicle-dev/git2-rs.git"
rev = "ae027b9e7b125f56397bbb7d8652b3427deeede6"

[patch.crates-io.libgit2-sys]
git = "https://github.com/radicle-dev/git2-rs.git"
rev = "ae027b9e7b125f56397bbb7d8652b3427deeede6"

